# asciibear

./: .gitignore  Cargo.toml  README.md  README.neo  chat.html  start-asciibear  start-bears-json-loader
html/: _v1_index.html  bears.json  bears.txt  index.html  index2.html  script.js  test-position.html  xstate.js
html/frames/: 1.txt  10.txt  11.txt  12.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
html/scripts/: _v1_bear.js  bear.js  xstate_4_38_2_dist_web.js
html/scripts/lodash/modularize/: lodash.default.js  lodash.js
iterm2_script/: key_watcher.py
scratchpad/: basic.txt
src/: _main_brach_main.rs  helpers.rs  home_page.html  lib.rs  main.rs  screen_capture.rs  stream_manager.rs
src/connection/: mod.rs
