[package]
name = "asciicam"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.18", features = ["ws"] }
cpal = "0.15.2"
device_query = "1.1.3"
futures = "0.3.28"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tower-http = "0.4.3"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
twitch-irc = "5.0.0"
uuid = { version = "1.4.1", features = ["v4"] }
