[package]
name = "asciibear"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.18", features = ["ws"] }
cpal = "0.15.2"
device_query = "1.1.3"
futures = "0.3.28"
nom = "7.1.3"
rml_rtmp = "0.8.0"
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["full"] }
tower = "0.4.13"
tower-http = {version =  "0.4.3", features = ['fs'] }
tower-livereload = "0.8.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
twitch-irc = "5.0.0"
uuid = { version = "1.4.1", features = ["v4"] }
bytes = "1"
opencv = { version = "0.84.5", features = ["clang-runtime"] }
clang = { version = "2.0.0", features = ["runtime"] }

